Marcadores hiro con imagen y kanji con elmento 3D.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
         <main>
             <div class="skew" >
-                <button >Marcadores</button>
+                <button onclick="location.href='./pages/markers.html';" >Marcadores</button>
                 <button>Image Tracking</button>
                 <button>Based Location</button>
             </div>
