Image Tracking con espera de carga de elementos y detector de gestos.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <main>
             <div class="skew" >
                 <button onclick="location.href='./pages/markers.html';" >Marcadores</button>
-                <button>Image Tracking</button>
+                <button onclick="location.href='./pages/ImageTracking.html';" >Image Tracking</button>
                 <button>Based Location</button>
             </div>
         </main>
