--- a/pages/markers.html
+++ b/pages/markers.html
@@ -7,8 +7,16 @@
     <!--Librerias-->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <link rel="stylesheet" href="../estilos/markers.css">
+    <script src="../javascript/ListenToScale.js" ></script>
 </head>
 <body style="margin: 0px; overflow: hidden">
+
+    <div class="controls">
+        <button id="up" class="margin-right">Scale up</button>
+        <button id="down">Scale down</button>
+    </div>
+
     <a-scene
     embedded
     arjs
@@ -17,7 +25,7 @@
     >
         <a-assets>
             
-            <a-asset-item src="../assets/pokemon_masters_cap/gorra.glb" id="pokeball"></a-asset-item>
+            <a-asset-item src="../assets/pokemon_masters_cap/gorra.glb" id="gorra"></a-asset-item>
             <img src="../assets/logo/Gastly.png" id="gastly" >
         </a-assets>
 
@@ -36,7 +44,8 @@
                 scale="0.001 0.001 0.001"
                 rotation="90 180 0"
                 position="0 0 0"
-                gltf-model="#pokeball"
+                gltf-model="#gorra"
+                listen-to-scale
             ></a-entity>
         </a-entity>
         </a-marker>
