Uso de Model Viewer para llevar el modelo 3D al entorno fisico

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <button onclick="location.href='./pages/markers.html';" >Marcadores</button>
                 <button onclick="location.href='./pages/ImageTracking.html';" >Image Tracking</button>
                 <button>Based Location</button>
+                <button onclick="location.href='./pages/ModelViewer.html';" >Web a Entorno Fisico</button>
             </div>
         </main>
         <footer >
