Location Based de un beedrill para el patio de mi casa

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="skew" >
                 <button onclick="location.href='./pages/markers.html';" >Marcadores</button>
                 <button onclick="location.href='./pages/ImageTracking.html';" >Image Tracking</button>
-                <button>Based Location</button>
+                <button onclick="location.href='./pages/LocationBased.html';" >Based Location</button>
                 <button onclick="location.href='./pages/ModelViewer.html';" >Web a Entorno Fisico</button>
             </div>
         </main>
