Traduccion al español del mensaje del loader y cambio de texto a simbolos en los botones UI del marcador kanji para el elemento 3D de la gorra.

--- a/pages/markers.html
+++ b/pages/markers.html
@@ -13,8 +13,9 @@
 <body style="margin: 0px; overflow: hidden">
 
     <div class="controls">
-        <button id="up" class="margin-right">Scale up</button>
-        <button id="down">Scale down</button>
+        <p>Escala <br>de la gorra</p>
+        <button id="up" class="margin-right">+</button>
+        <button id="down">-</button>
     </div>
 
     <a-scene
