Eliminacion de archivo innecesario y cambio a ruta absoluta para la tarjeta de image tracking

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <div class="Tarjeta" >
                 <div class="Ejemplo Order">
-                    <img src="./assets/Portadas/ImageTRacking.jpg" class="Imagen" />
+                    <img src="https://raw.githubusercontent.com/gustavo-exe/ArJsPokemon/master/assets/Portadas/ImageTracking.jpg" class="Imagen" />
                 </div>
                 
                 <div class="Informacion Order">
